# fang_oost_option_rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
benches/: bench.rs  option_price_bench.rs
call price/base/: estimates.json  raw.csv  sample.json  tukey.json
call price/new/: estimates.json  raw.csv  sample.json
call price/report/: index.html
put theta/base/: estimates.json  raw.csv  sample.json  tukey.json
put theta/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
put theta/report/: index.html
report/: index.html
src/: lib.rs  monotone_spline.rs  option_calibration.rs  option_pricing.rs
