[package]
name = "fang_oost_option"
version = "0.28.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/fang_oost_option_rust"
repository = "https://github.com/phillyfan1138/fang_oost_option_rust"
readme = "README.md"
license = "MIT"
description = "A library implementing Fang and Oosterlee's algorithm for option pricing."
edition = "2018"

[dependencies]
num = "0.2"
rayon = "1.0.1"
num-complex = "0.2"
fang_oost = "0.14.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
approx = "0.2.0"
black_scholes = "0.2.7"
cf_functions = "0.6.0"
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false

[badges]
travis-ci = { repository = "phillyfan1138/fang_oost_option_rust" }