[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
description = "A library implementing Fang and Oosterlee's algorithm for option pricing."
edition = "2018"
homepage = "https://github.com/danielhstahl/fang_oost_option_rust"
license = "MIT"
name = "fang_oost_option"
readme = "README.md"
repository = "https://github.com/danielhstahl/fang_oost_option_rust"
version = "0.32.1"

[dependencies]
black_scholes = "0.5"
fang_oost = "^0.15.1"
num = "0.2"
num-complex = "0.2"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
approx = "0.2.0"
cf_functions = "0.15.1"
criterion = "0.2"

[[bench]]
harness = false
name = "option_price_bench"

[badges]
travis-ci = {repository = "danielhstahl/fang_oost_option_rust"}
